; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_replace_text.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_replace_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dstr*, i64, i64, i8*)* @replace_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @replace_text(%struct.dstr* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca %struct.dstr*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.dstr, align 4
  %10 = alloca %struct.dstr, align 4
  store %struct.dstr* %0, %struct.dstr** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = bitcast %struct.dstr* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %11, i8 0, i64 4, i1 false)
  %12 = bitcast %struct.dstr* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 4, i1 false)
  %13 = load %struct.dstr*, %struct.dstr** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @dstr_left(%struct.dstr* %9, %struct.dstr* %13, i64 %14)
  %16 = load %struct.dstr*, %struct.dstr** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = add i64 %17, %18
  %20 = call i32 @dstr_right(%struct.dstr* %10, %struct.dstr* %16, i64 %19)
  %21 = load %struct.dstr*, %struct.dstr** %5, align 8
  %22 = call i32 @dstr_copy_dstr(%struct.dstr* %21, %struct.dstr* %9)
  %23 = load %struct.dstr*, %struct.dstr** %5, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = call i32 @dstr_cat(%struct.dstr* %23, i8* %24)
  %26 = load %struct.dstr*, %struct.dstr** %5, align 8
  %27 = call i32 @dstr_cat_dstr(%struct.dstr* %26, %struct.dstr* %10)
  %28 = call i32 @dstr_free(%struct.dstr* %9)
  %29 = call i32 @dstr_free(%struct.dstr* %10)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @dstr_left(%struct.dstr*, %struct.dstr*, i64) #2

declare dso_local i32 @dstr_right(%struct.dstr*, %struct.dstr*, i64) #2

declare dso_local i32 @dstr_copy_dstr(%struct.dstr*, %struct.dstr*) #2

declare dso_local i32 @dstr_cat(%struct.dstr*, i8*) #2

declare dso_local i32 @dstr_cat_dstr(%struct.dstr*, %struct.dstr*) #2

declare dso_local i32 @dstr_free(%struct.dstr*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
